--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "8501:8501"
     volumes:
-      - ./app:/app
+      - .:/app
     working_dir: /app
     command: streamlit run app.py
